backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvsac-k8s-service
spec:
  type: LoadBalancer
  selector:
    app: mvsac_k8s
  ports:
    - protocol: TCP
      port: 80         # 클러스터 외부에서 접근할 포트
      targetPort: 8000 # 컨테이너에서 열어둔 포트 (uvicorn 8000)
